--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     },
     "autoload-dev": {
         "psr-4": {
-            "Mikhail\\Tests\\Encyptor\\": "tests"
+            "Mikhail\\Tests\\Encyptor\\": "tests/"
         }
     },
     "authors": [
